# python-poetry-boilerplate

./: .gitignore  Makefile  pyproject.toml
