[tool.poetry]
name = "python-poetry-boilerplate"
version = "0.1.0"
description = "Boilerplate for small, quick python apps/packages built using poetry"
authors = ["nicelgueta <nicelgueta@gmail.com>"]
license = "MIT"
readme="README.md"
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
